@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.48 2004/09/09 07:14:16 xtraeme Exp $
+# $NetBSD: Makefile,v 1.49 2004/10/11 21:15:48 abs Exp $
 
 DISTNAME=       jakarta-tomcat-${TOMCAT_VERSION}
-PKGREVISION=	1
 CATEGORIES=	www java
 # The list of sites to download is generated by a jakarta website.
 # The getsite.sh script parses the HTML and extracts the urls.
@@ -11,7 +10,7 @@ MAINTAINER=	erh@NetBSD.org
 HOMEPAGE=	http://jakarta.apache.org/tomcat/
 COMMENT=	The Apache Project's Java Servlet 2.4 and JSP 2.0 server
 
-TOMCAT_VERSION=	5.0.27
+TOMCAT_VERSION=	5.0.28
 
 # This needs java 1.4 or higher.
 USE_JAVA2=	yes
@@ -22,6 +21,10 @@ CATALINA_DIR=	Catalina/localhost
 
 EGDIR=		${TOMCAT_LIB}/share/examples/${PKGBASE}
 EGDIR2=		${EGDIR}/${CATALINA_DIR}
+
+# Work around a horrible interaction with the gzip in NetBSD 2.0 (at least RC4)
+# If gzip is used in a pipeline the tarfile fails to extract. PR bin/27228
+EXTRACT_CMD=	${CP} ${DOWNLOADED_DISTFILE} ${WRKDIR}/tar.gz && ${GZIP_CMD} -d ${WRKDIR}/tar.gz && ${TAR} xf ${WRKDIR}/tar
 
 PKG_SYSCONFDIR.jakarta-tomcat=	${TOMCAT_LIB}/conf
 MAKE_DIRS=	${PKG_SYSCONFDIR.jakarta-tomcat}/${CATALINA_DIR}
